# boilerplate-fastapi

./: Makefile  README.md  pyproject.toml
adapters/configurator/: config.py
adapters/database/: connection.py  models.py
adapters/repositories/: users.py
adapters/web/: server.py
adapters/web/api/routers/v1/: router_base.py  router_healthcheck.py  router_user.py
adapters/web/api/schemas/: user.py
adapters/web/api/v1/: router_base.py  router_ping.py
aplication/healthcheck/: healthcheck.py  healthcheck_interface.py  healthcheck_service.py
aplication/users/: user.py  user_interface.py
